Ajustement des styles

--- a/ng_PetBoarding_app/src/app/features/prestations/components/prestation-filters.component.html
+++ b/ng_PetBoarding_app/src/app/features/prestations/components/prestation-filters.component.html
@@ -36,7 +36,7 @@
 
     <!-- Bouton de réinitialisation -->
     <div class="col-md-2">
-      <button mat-stroked-button type="button" class="w-100 h-100" (click)="clearFilters()">
+      <button mat-raised-button color="accent" type="button" class="w-100" (click)="clearFilters()">
         <mat-icon>clear</mat-icon>
         Effacer
       </button>
