--- a/ng_PetBoarding_app/src/app/features/reservations/components/reservation-filters.component.html
+++ b/ng_PetBoarding_app/src/app/features/reservations/components/reservation-filters.component.html
@@ -77,8 +77,8 @@
           type="button"
           class="w-100 clear-filters-btn"
           (click)="clearFilters()">
-          <mat-icon>refresh</mat-icon>
-          <span class="d-none d-lg-inline ms-1">Effacer</span>
+          <mat-icon>clear</mat-icon>
+          Effacer
         </button>
       </div>
     </div>
