Ajout du filtre sur le type d'animal lors d'une réservation. Uniformisation de PetType plutôt que des string. Modification du design de pet-details (lecture et écriture) pour plus de cohérence.

--- a/ng_PetBoarding_app/src/app/features/basket/components/basket-item.component.html
+++ b/ng_PetBoarding_app/src/app/features/basket/components/basket-item.component.html
@@ -3,6 +3,14 @@
     <div class="item-info" (click)="onPrestationClick()">
       <h4 class="item-title">{{ item().prestation.libelle }}</h4>
       <p class="item-description">{{ item().prestation.description }}</p>
+
+      @if (item().pet && petCategoryInfo()) {
+        <div class="pet-info">
+          <i [class]="petCategoryInfo()!.icon" [style.color]="petCategoryInfo()!.color"></i>
+          <span>{{ item().pet!.name }}</span>
+        </div>
+      }
+
       <div class="item-details">
         <span class="category">{{ getCategoryLabel(item().prestation.categorieAnimal) }}</span>
         <span class="duration">{{ formatDuration(item().prestation.duree) }}</span>
