--- a/ng_PetBoarding_app/src/app/features/prestations/components/selection-dates.component.scss
+++ b/ng_PetBoarding_app/src/app/features/prestations/components/selection-dates.component.scss
@@ -1,29 +1,4 @@
-@use '../../../../../variables' as vars;
-
-// Classe commune pour les tailles d'icônes
-.icon-20 {
-  font-size: 20px;
-  width: 20px;
-  height: 20px;
-}
-
-.icon-24 {
-  font-size: 24px;
-  width: 24px;
-  height: 24px;
-}
-
-.icon-18 {
-  font-size: 18px;
-  width: 18px;
-  height: 18px;
-}
-
-.icon-16 {
-  font-size: 16px;
-  width: 16px;
-  height: 16px;
-}
+@use '../../../../variables' as vars;
 
 .date-selection-card {
   max-width: 800px;
