Corrections suite à la modification des réponses côté back

--- a/ng_PetBoarding_app/src/app/features/profile/components/profile-info.component.html
+++ b/ng_PetBoarding_app/src/app/features/profile/components/profile-info.component.html
@@ -14,10 +14,10 @@
               {{ user.email }}
             </div>
           }
-          @if (user.phone) {
+          @if (user.phoneNumber) {
             <div class="user-phone d-flex align-items-center">
               <mat-icon class="me-2 text-white-50" style="font-size: 1rem">phone</mat-icon>
-              {{ user.phone }}
+              {{ user.phoneNumber }}
             </div>
           }
         </div>
